# testing-ormolu

./: README.md  cabal.project  one.cabal
two/: two.cabal
two/app/: Main.hs
